[workspace]
members = [
    "tests",
    "contracts/order-book-contract",
    "contracts/liquidity-lock-script",
    "contracts/info-type-script",
    "contracts/info-lock-script",
    "ckb-contract-test-engine",
    "share"
]

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'