[package]
name = "natives"
version = "0.1.0"
authors = ["zkzkp <zk.sec@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "29455b8", features = ["ckb-types", "simulator"] }

[[bin]]
name = "asset-order-lockscript"
path = "src/asset_order_lockscript.rs"
