[package]
name = "natives"
version = "0.1.0"
authors = ["zkzkp <zk.sec@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-dyn-lock = { path = "deps/ckb-dyn-lock", features = ["lock_binary", "test_tool"] }
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std", rev = "29455b8", features = ["ckb-types", "simulator"] }
ckb-tool = "0.2.1"
share = { path = "../share" }
num-bigint = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }

[[bin]]
name = "asset-order-lockscript-sim"
path = "src/asset_order_lockscript.rs"
